changed urls from textt class to url class. No adverse styling effects observed.

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -27,7 +27,7 @@ The positive-inside rule also received support from protein engineering experime
 
 It remains unclear exactly why and how exactly the positive charge determines topology from a biophysical perspective. Positively charged residues are suggested to be stronger determinants of topology than negatively charged residues due to a dampening of the translocation potential of negatively charged residues. This dampening factor is the result of protein-lipid interactions with net zero charged phospholipid, phosphatidylethanolamine and other neutral lipids. This effect favours cytoplasmic retention of positively charged residues~\cite{Bogdanov2014}.
 
-The recent accumulation of \gls{tmp} sequences and structures allowed revisiting the problem of charged residue distribution in \gls{tmh}s (see also \texttt{http://blanco.biomol.uci.edu/mpstruc/}). For example, whilst \(\beta\)--sheets contain charged residues in the \gls{tm} region, α-helices generally do not (38). Large-scale sequence analysis of \gls{tmh} from various organelle membrane surfaces in eukaryotic proteomes confirm the clustering of positive charge having a statistical bias for the cytosolic side of the membrane. At the same time, there are many \gls{tmh} exception examples to the positive-inside rule; however as a trend, topology can be determined by simply looking for the most positive loop region between helices~\cite{Sharpe2010, Baeza-Delgado2013}.
+The recent accumulation of \gls{tmp} sequences and structures allowed revisiting the problem of charged residue distribution in \gls{tmh}s (see also \url{http://blanco.biomol.uci.edu/mpstruc/}). For example, whilst \(\beta\)--sheets contain charged residues in the \gls{tm} region, α-helices generally do not (38). Large-scale sequence analysis of \gls{tmh} from various organelle membrane surfaces in eukaryotic proteomes confirm the clustering of positive charge having a statistical bias for the cytosolic side of the membrane. At the same time, there are many \gls{tmh} exception examples to the positive-inside rule; however as a trend, topology can be determined by simply looking for the most positive loop region between helices~\cite{Sharpe2010, Baeza-Delgado2013}.
 
 When the observation of positively charged residues preferentially localised at the cytoplasmic edge of \gls{tmh}s emerged, it was also asked whether negatively charged residues work in concert with \gls{tmh} orientation. It was shown that a single additional lysine residue can reverse the topology of a model \textit{Escherichia coli} protein, whereas a much higher number of negatively charged residues is needed to achieve the same~\cite{Nilsson1990}; nevertheless, a sufficiently large negative charge can overturn the positive-inside rule~\cite{Andersson1993, Kim1994} and, thus indeed, negative residues are topologically active to a point. Negatively charged residues were observed in the flanks of \gls{tmh}s~\cite{Baeza-Delgado2013}, especially of marginally hydrophobic \gls{tm} regions~\cite{Delgado-Partin1998}. It is known that the negatively charged acidic residues in \gls{tm} regions have a non-trivial role in the biological context. In \textit{E. coli}, negative residues experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant during the electrostatic interactions of insertion~\cite{Ismail2012, Ismail2015}.
 
@@ -49,7 +49,7 @@ The charge bias effect is even clearer when a classification of \gls{tmh}s into 
 
 \subsection{Acidic residues within and nearby \gls{tmh} segments are rare}
 
-In order to reliably compare the amino acid sequence properties of \gls{tmh}s, we assembled datasets of \gls{tmh} proteins from what are likely to be the best in terms of quality and comprehensiveness of annotation in eukaryotic and prokaryotic representative genomes, as well as composite datasets to represent larger taxonomic groups and with regard to subcellular locations (see Table 1). In total, 3292 single-pass \gls{tmh} segments and 29898 multi-pass \gls{tmh} segments were extracted from various UniProt~\cite{TheUniProtConsortium2014} text files according to TRANSMEM annotation (download dated 20--03--2016). The UniProt datasets used only included manually curated records; however, it is still necessary to check for systematic bias due to the prediction methods used by UniProt for \gls{tmh} annotation in the majority of cases without direct experimental evidence. Therefore, a fully experimentally verified dataset was also generated for comparison. The representative 1544 single-pass and 15563 \gls{tmh}s were extracted from the manually curated experimentally verified TOPDB~\cite{Dobson2015} database (download dated 21--03--2016) referred to as ExpAll here (Table1). \gls{tmh} organelle residency is defined according to UniProt annotation. To ensure reliability, organelles were only analysed from a representative redundancy-reduced protein dataset of the most well-studied genome: Homo sapiens (referred to as UniHuman herein). The several datasets from UniProt  are subdivided into different human organelles (UniPM, UniER, UniGolgi) and taxonomical groups (UniHuman, UniCress, UniBacilli, UniEcoli, UniArch, UniFungi) as described in Table 1 (see also Methods section). As will be shown below, these various datasets allow us to validate our findings for a variety of conditions, namely with regard (i) to experimental verification of \gls{tmh}s, (ii) to origin from various species and taxonomic groups, (iii) to the number of \gls{tmh}s in the same protein as well as (iv) to subcellular localization. Datasets and programs used in this work can be downloaded from \texttt{http://mendel.bii.a-star.edu.sg/SEQUENCES/NNI/}.
+In order to reliably compare the amino acid sequence properties of \gls{tmh}s, we assembled datasets of \gls{tmh} proteins from what are likely to be the best in terms of quality and comprehensiveness of annotation in eukaryotic and prokaryotic representative genomes, as well as composite datasets to represent larger taxonomic groups and with regard to subcellular locations (see Table 1). In total, 3292 single-pass \gls{tmh} segments and 29898 multi-pass \gls{tmh} segments were extracted from various UniProt~\cite{TheUniProtConsortium2014} text files according to TRANSMEM annotation (download dated 20--03--2016). The UniProt datasets used only included manually curated records; however, it is still necessary to check for systematic bias due to the prediction methods used by UniProt for \gls{tmh} annotation in the majority of cases without direct experimental evidence. Therefore, a fully experimentally verified dataset was also generated for comparison. The representative 1544 single-pass and 15563 \gls{tmh}s were extracted from the manually curated experimentally verified TOPDB~\cite{Dobson2015} database (download dated 21--03--2016) referred to as ExpAll here (Table1). \gls{tmh} organelle residency is defined according to UniProt annotation. To ensure reliability, organelles were only analysed from a representative redundancy-reduced protein dataset of the most well-studied genome: Homo sapiens (referred to as UniHuman herein). The several datasets from UniProt  are subdivided into different human organelles (UniPM, UniER, UniGolgi) and taxonomical groups (UniHuman, UniCress, UniBacilli, UniEcoli, UniArch, UniFungi) as described in Table 1 (see also Methods section). As will be shown below, these various datasets allow us to validate our findings for a variety of conditions, namely with regard (i) to experimental verification of \gls{tmh}s, (ii) to origin from various species and taxonomic groups, (iii) to the number of \gls{tmh}s in the same protein as well as (iv) to subcellular localization. Datasets and programs used in this work can be downloaded from \url{http://mendel.bii.a-star.edu.sg/SEQUENCES/NNI/}.
 
 The hydrophobic nature of the lipid bilayer membrane implies that, generally, charged residues should be rare within \gls{tmh}s. For acidic residues, even the location in the sequence vicinity of \gls{tmh}s should be disfavoured because of the negatively charged head groups of lipids directed towards the aqueous extracellular side or the cytoplasm. In agreement with the biophysically justified expectations, the statistical data confirms that acidic residues are especially rare in \gls{tmh}s and their flanking regions. In Figure 1 where we plot the total abundance of all amino acid types in single-pass \gls{tmh}s and multi-pass \gls{tmh}s (including their $\pm$5 flanking residues), acidic residues were found to be amongst the rarest amino acids both in UniHuman and ExpAll.
 
@@ -67,7 +67,7 @@ Bar charts of the abundance of each amino acid type in the \gls{tmh}s with flank
 
 The effect is most pronounced in single-pass \gls{tmp}s (Figure~\ref{fig:amino_acid_distribution}). There are only 666 glutamates (just 1.24\% of all residues) and 560 aspartates (1.05\% respectively) among the total set of 53238 residues comprised in 1705 \gls{tmh}s and their flanks. Within just the \gls{tmh} regions, there are 71 glutamates (0.20\% of all residues in \gls{tmh}s and flanks) and 58 aspartates (0.16\% respectively). This cannot be an artefact of UniProt \gls{tmh} assignments since this feature is repeated in ExpAll. There are only 582 glutamates (1.22\%) and 520 aspartates (1.09\%) among the 47568 residues involved. Within the \gls{tmh} itself, there are 64 glutamates (0.19\%) and 69 aspartates (0.21\%). In both cases, the negatively charged residues represent the ultimate end of the distribution. To note, acidic residues are rare even compared to positively charged residues which are about 3--4 times more frequent. On a much smaller dataset of single-spanning \gls{tmp}, Nakashima et al. (51) made similar compositional studies. To compare, they found 0.94\% glutamate and 0.94\% aspartate within just the \gls{tmh} region (values very similar to ours from \gls{tmh}s with small flanks; apparently, they used more outwardly defined \gls{tmh} boundaries) but the content of each glutamate and aspartate within the extracellular or cytoplasmic domains is larger by an order of magnitude, between 5.26\% and 9.34\%. These latter values tend to be even higher than the average glutamate and aspartate composition throughout the protein database (5--6\%~\cite{Nakashima1992}).
 
-In the case of multi-pass \gls{tmp}s ( (Figure~\ref{fig:amino_acid_distribution})), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll). Yet, their occurrence is similar to those of histidine and tryptophan and, notably, acidic residues are only about $\sim$1.5 times less frequent than positively charged residues. The observation that acidic residues are more suppressed in single-pass \gls{tmh}s compared with the case of multi-pass \gls{tmh}s is statistically significant. In Table 1, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices. Indeed, single-pass helices appear to tolerate negative charge to a far lesser extent than multi-pass helices as the data in the top two rows of Table 1 indicates (for datasets UniHuman and ExpAll). The trend is strictly observed throughout subcellular localisations (rows 3--5 in Table 1) and taxa (rows 6--10). Statistical significance (P≤0.001) is found in all but six cases. These are UniEcoli (D+E, D, E), UniArch (D+E, E) and UniFungi (E). The problem is, most likely, that the respective datasets are quite small. Notably, the difference between single- and multi-pass \gls{tmh}s is greatest in UniPM\@; here, \gls{tmh}s from multi-pass proteins have on average 0.400 negative residues per helix, whereas single-pass \gls{tmh}s contained just 0.039 (P=3.86e-28).
+In the case of multi-pass \gls{tmp}s ((Figure~\ref{fig:amino_acid_distribution})), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll). Yet, their occurrence is similar to those of histidine and tryptophan and, notably, acidic residues are only about $\sim$1.5 times less frequent than positively charged residues. The observation that acidic residues are more suppressed in single-pass \gls{tmh}s compared with the case of multi-pass \gls{tmh}s is statistically significant. In Table 1, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices. Indeed, single-pass helices appear to tolerate negative charge to a far lesser extent than multi-pass helices as the data in the top two rows of Table 1 indicates (for datasets UniHuman and ExpAll). The trend is strictly observed throughout subcellular localisations (rows 3--5 in Table 1) and taxa (rows 6--10). Statistical significance (P≤0.001) is found in all but six cases. These are UniEcoli (D+E, D, E), UniArch (D+E, E) and UniFungi (E). The problem is, most likely, that the respective datasets are quite small. Notably, the difference between single- and multi-pass \gls{tmh}s is greatest in UniPM\@; here, \gls{tmh}s from multi-pass proteins have on average 0.400 negative residues per helix, whereas single-pass \gls{tmh}s contained just 0.039 (P=3.86e-28).
 
 \subsection{Amino acid residue distribution analysis reveals a ``negative-not-inside/negative-outside'' signal in single-pass \gls{tmh} segments}
 
