Exit clearence backup

--- a/thesis.tex
+++ b/thesis.tex
@@ -56,13 +56,13 @@
 \def\wordcount{22,000}
 
 % Uncomment the line below to suppress the `List of Tables' page (optional)
-\tablespagefalse{}
+%\tablespagefalse{}
 
 % Uncomment the line below to suppress the `List of Figures' page (optional)
-\figurespagefalse{}
+%\figurespagefalse{}
 
 % Uncomment the line below to suppress the `Abbreviations' page (optional)
-\glossariespagefalse{}
+%\glossariespagefalse{}
 
 % Uncomment the line below to use a customised Declaration statement
 %\def\declaration{All the work in this thesis has been sourced from Google}
@@ -103,7 +103,7 @@ The survival of each of our cells relies on a cellular barrier to separate thems
 
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin. Proteins are the molecular machinery that power the cells and carry out the functions of life. Around a third of our genome codes for protein that are permanently embedded in the membrane and make up an estimated two thirds of drug targets. Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
 
-Here, we analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants. This is especially true for regions that specifically anchor the protein into the cellular wall. Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen. This has significance for those scientists that are studying how a particular protein is produced, and will have an impact in designing novel proteins, 
+Here, we analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants. This is especially true for regions that specifically anchor the protein into the cellular wall. Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen. This has significance for those scientists that are studying how a particular protein is produced, and will have an impact in designing novel proteins,
 
 
 
