cleaned up acc and sorted positioning

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -21,7 +21,7 @@ Measurements of the \gls{tmh} regions have found that they are roughly 20 residu
 \medskip
 \small
 \justify
-The example used here for illustrative purposes is the trans-membrane region of therein (PDB 2LK9)~\cite{Skasko2012}. Dark grey areas denote the area of lipid head groups. The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane. The helix core is mostly composed of hydrophobic residues. Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
+The example used here for illustrative purposes is the trans-membrane region of therein (\gls{pdb} 2LK9)~\cite{Skasko2012}. Dark grey areas denote the area of lipid head groups. The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane. The helix core is mostly composed of hydrophobic residues. Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
 \label{fig:helixcartoon1}
 \end{figure}
 
