--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -56,12 +56,12 @@ The hydrophobic nature of the lipid bilayer membrane implies that, generally, ch
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{NNI_chapter/amino_acid_distribution}
-\caption{ Negatively charged amino acids are amongst the rarest residues in \gls{tmh}s and ±5 flanking residues.}
+\caption{ Negatively charged amino acids are amongst the rarest residues in \gls{tmh}s and $\pm$5 flanking residues.}
 
 \medskip
 \small
 \justify
-Bar charts of the abundance of each amino acid type in the \gls{tmh}s with flank lengths of the accompanying ±5 residues from the (a) UniHuman single-pass proteins, (b) ExpAll single-pass proteins, (c) UniHuman multi-pass proteins, and (d) ExpAll multi-pass proteins. Amino acid types on the horizontal axis are listed in descending count. The bars were coloured according to categorisations of hydrophobic, neutral and hydrophilic types according to the free energy of insertion biological scale~\cite{Hessa2005}. Grey represents hydrophilic amino acids that were found to have a positive $\Delta$G app, and blue represents hydrophobic residues with a negative $\Delta$G app, purple denotes negative residues and positive residues are coloured in orange. The abundances of key residues are labelled.
+Bar charts of the abundance of each amino acid type in the \gls{tmh}s with flank lengths of the accompanying $\pm$5 residues from the (a) UniHuman single-pass proteins, (b) ExpAll single-pass proteins, (c) UniHuman multi-pass proteins, and (d) ExpAll multi-pass proteins. Amino acid types on the horizontal axis are listed in descending count. The bars were coloured according to categorisations of hydrophobic, neutral and hydrophilic types according to the free energy of insertion biological scale~\cite{Hessa2005}. Grey represents hydrophilic amino acids that were found to have a positive $\Delta$G app, and blue represents hydrophobic residues with a negative $\Delta$G app, purple denotes negative residues and positive residues are coloured in orange. The abundances of key residues are labelled.
 \label{fig:amino_acid_distribution}
 \end{figure}
 
@@ -143,7 +143,7 @@ Amino acid residue profiles along the \gls{tm} segment and its flanks differ bet
 \medskip
 \justify
 \footnotesize
-The residue position aligned to the centre of the \gls{tmh} is on the horizontal axis, and the residue type is on the vertical axis. Amino acid types are listed in order of decreasing hydrophobicity according to the Kyte and Doolittle scale [52]. The flank lengths in the \gls{tmh} segments were restricted to up to ±10 residues. The scales for each heatmap are shown beneath the respective subfigure. The darkest blue represents 0\% distribution, whilst the darkest red represents the maximum relative percentage distribution that is denoted by the keys in each subfigure, with white being 50\% between “cold” and “hot”. The central \gls{tmh} subplots extend from the central \gls{tmh} residue, whereas the inner and outer flank subplots use the database-defined \gls{tmh} boundary and extend from that position. a \gls{tmh}s from the single-pass UniHuman dataset. b Single-pass protein \gls{tmh}s from the ExpAll dataset. c \gls{tmh}s from the proteins of the multi-pass UniHuman dataset. d \gls{tmh}s from ExpAll multi-pass proteins. The general consistency in relative distributions of every residue type between single-pass and multi-pass of either dataset including flank/\gls{tmh} boundary selection allows us to infer biological conclusions from these distributions that are independent of methodological biases used to gather the sequences. The only residue that displays drastically differently between the datasets is cysteine in multi-pass \gls{tmh}s only. The most striking differences in distributions between residues from \gls{tmh}s of single-pass and multi-pass proteins include a more defined Y and W clustering at the flanks, a suppression of E and D on the inside flank, a suppression of P on the inside flank and a topological bias for C favouring the inside flank.
+The residue position aligned to the centre of the \gls{tmh} is on the horizontal axis, and the residue type is on the vertical axis. Amino acid types are listed in order of decreasing hydrophobicity according to the Kyte and Doolittle scale [52]. The flank lengths in the \gls{tmh} segments were restricted to up to $\pm$10 residues. The scales for each heatmap are shown beneath the respective subfigure. The darkest blue represents 0\% distribution, whilst the darkest red represents the maximum relative percentage distribution that is denoted by the keys in each subfigure, with white being 50\% between “cold” and “hot”. The central \gls{tmh} subplots extend from the central \gls{tmh} residue, whereas the inner and outer flank subplots use the database-defined \gls{tmh} boundary and extend from that position. a \gls{tmh}s from the single-pass UniHuman dataset. b Single-pass protein \gls{tmh}s from the ExpAll dataset. c \gls{tmh}s from the proteins of the multi-pass UniHuman dataset. d \gls{tmh}s from ExpAll multi-pass proteins. The general consistency in relative distributions of every residue type between single-pass and multi-pass of either dataset including flank/\gls{tmh} boundary selection allows us to infer biological conclusions from these distributions that are independent of methodological biases used to gather the sequences. The only residue that displays drastically differently between the datasets is cysteine in multi-pass \gls{tmh}s only. The most striking differences in distributions between residues from \gls{tmh}s of single-pass and multi-pass proteins include a more defined Y and W clustering at the flanks, a suppression of E and D on the inside flank, a suppression of P on the inside flank and a topological bias for C favouring the inside flank.
 \label{fig:comp_heatmaps}
 \end{figure}
 
@@ -173,7 +173,7 @@ Generally, we see in Figure \ref{fig:comp_heatmaps} that compositional biases ap
 \medskip
 \justify
 \small
-The difference in hydrophobicity between the single-pass and multi-pass datasets stratified by number of TMHs is not due to the choice of scale. As with Figure~\ref{fig:hydrophobicity_single_multi}, UniHuman was stratified according to the number of TMHs in each protein. The mean amino acid hydrophobicity values of TMHs with a sliding unweighted window of 3 residues from UniHuman proteins at each position were plotted. To validate the findings presented in Figure \ref{fig:hydrophobicity_single_multi}A, several scales of hydrophobicity were used. (A) The White and Wimley whole residue scale~\cite{White1999} is based on the partitioning of peptides between water and octanol as well as water to POPC. A positive score indicates a more polar score. (B) The Hessa biological scale~\cite{Hessa2005}. The hydrophobicity values represent the free energy exchange during recognition of designed peptide TMHs by the endoplasmic reticulum Sec61 translocon and, therefore, negative values indicate an energetic preference for the interior of a lipid bilayer. (C) The Eisenberg consensus scale~\cite{Eisenberg1984} is a scale based on the earlier scales from Nozaki and Tanford~\cite{Nozaki1971}, Wolfenden \textit{et al.}~\cite{Wolfenden1981}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979} and the von Heijne and Blomberg scale~\cite{VonHeijne1979}. The scales are normalised according to serine. A positive score indicates a generally more hydrophobic score.
+The difference in hydrophobicity between the single-pass and multi-pass datasets stratified by number of TMHs is not due to the choice of scale. As with Figure~\ref{fig:hydrophobicity_single_multi}, UniHuman was stratified according to the number of TMHs in each protein. The mean amino acid hydrophobicity values of TMHs with a sliding unweighted window of 3 residues from UniHuman proteins at each position were plotted. To validate the findings presented in Figure \ref{fig:hydrophobicity_single_multi}A, several scales of hydrophobicity were used. (A) The White and Wimley whole residue scale~\cite{White1999} is based on the partitioning of peptides between water and octanol as well as water to \gls{popc}. A positive score indicates a more polar score. (B) The Hessa biological scale~\cite{Hessa2005}. The hydrophobicity values represent the free energy exchange during recognition of designed peptide TMHs by the endoplasmic reticulum Sec61 translocon and, therefore, negative values indicate an energetic preference for the interior of a lipid bilayer. (C) The Eisenberg consensus scale~\cite{Eisenberg1984} is a scale based on the earlier scales from Nozaki and Tanford~\cite{Nozaki1971}, Wolfenden \textit{et al.}~\cite{Wolfenden1981}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979} and the von Heijne and Blomberg scale~\cite{VonHeijne1979}. The scales are normalised according to serine. A positive score indicates a generally more hydrophobic score.
 \label{fig:hydrophobicity_scale_comparison}
 \end{figure}
 
@@ -188,7 +188,7 @@ This trend is statistically significant for \gls{tmh}s in many biological membra
 \medskip
 \justify
 \small
-Comparing charged amino acid distributions in TMHs of multi-pass and single-pass proteins across different species and organelles. The relative percentage distribution of charged residues and leucine was calculated at each position in the TMH with flank lengths of ±20 in different datasets. The distributions are normalised according to relative percentage distribution. Aspartic acid and glutamic acid are shown in dark purple and light purple respectively. Leucine, the most abundant non-polar residue in TMHs, is in blue. Arginine and lysine are shown in orange. TMHs from single-pass proteins are on the left and TMHs from multi-pass proteins are on the right for different taxonomic datasets: a UniCress, b UniFungi, c UniEcoli, d UniBacilli, e UniArch, and different organelles: f UniER, g UniGolgi, h UniPM. As a trend, the negative-outside skew is more present in TMHs from single-pass proteins than multi-pass proteins (Tables 2 and 3). Another key observation is that in single-pass TMHs there is a propensity for leucine on the inner over the outer leaflet (Table 4)
+Comparing charged amino acid distributions in TMHs of multi-pass and single-pass proteins across different species and organelles. The relative percentage distribution of charged residues and leucine was calculated at each position in the TMH with flank lengths of $\pm$20 in different datasets. The distributions are normalised according to relative percentage distribution. Aspartic acid and glutamic acid are shown in dark purple and light purple respectively. Leucine, the most abundant non-polar residue in TMHs, is in blue. Arginine and lysine are shown in orange. TMHs from single-pass proteins are on the left and TMHs from multi-pass proteins are on the right for different taxonomic datasets: a UniCress, b UniFungi, c UniEcoli, d UniBacilli, e UniArch, and different organelles: f UniER, g UniGolgi, h UniPM. As a trend, the negative-outside skew is more present in TMHs from single-pass proteins than multi-pass proteins (Tables 2 and 3). Another key observation is that in single-pass TMHs there is a propensity for leucine on the inner over the outer leaflet (Table 4)
 \label{fig:dataset_distributions}
 \end{figure}
 
