added osx path export command.

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -261,7 +261,7 @@ There are differences in charged amino acid residue biases in \gls{tmh} flanks t
 
 Here, we observe differences throughout sub-cellular locations along the secretory pathway. We found that negative charges are enriched at the outside flank (in the \gls{er}), both enriched outside and suppressed inside for the Golgi membrane, and suppressed on the inside flank in the \gls{pm}. It has been suggested that the leaflets of different membranes have different lipid compositions throughout the secretory pathway~\cite{VanMeer2008} and this has led to general biochemical conservation in terms of \gls{tmh} length and amino acid composition in different membranes~\cite{Sharpe2010, Pogozheva2013}.
 
-Lipid asymmetry in the Golgi and \gls{pm} (in contrast to the \gls{er}) has been known about for over a decade~\cite{Daleke2007, Devaux2004}. To note, the Golgi and PM have lipid asymmetry with sphingomyelin and glycosphingolipids on the non-cytosolic leaflet, and phosphatidylserine and phosphatidylethanolamine enriched in the cytosolic leaflet. Although the \gls{er} is the main site for cholesterol synthesis, it has markedly low concentrations of sphingolipids~\cite{Bell1981}. Golgi synthesises sphingomyelin, a lipid not present in the \gls{er}, but present in both the Golgi~\cite{Futerman2005} and in the \gls{pm}~\cite{Li2007, Tafesse2007}. The PM is also enriched with densely packed sphingolipids and sterols~\cite{Paolo2006}. Another factor influencing the sequence patterns of \gls{tmh}s and their along the secretory pathway appears to be the variation in membrane potentials~\cite{Qin2011, Worley1994, Schapiro2000}.
+Lipid asymmetry in the Golgi and \gls{pm} (in contrast to the \gls{er}) has been known about for over a decade~\cite{Daleke2007, Devaux2004}. To note, the Golgi and \gls{pm} have lipid asymmetry with sphingomyelin and glycosphingolipids on the non-cytosolic leaflet, and phosphatidylserine and phosphatidylethanolamine enriched in the cytosolic leaflet. Although the \gls{er} is the main site for cholesterol synthesis, it has markedly low concentrations of sphingolipids~\cite{Bell1981}. Golgi synthesises sphingomyelin, a lipid not present in the \gls{er}, but present in both the Golgi~\cite{Futerman2005} and in the \gls{pm}~\cite{Li2007, Tafesse2007}. The \gls{pm} is also enriched with densely packed sphingolipids and sterols~\cite{Paolo2006}. Another factor influencing the sequence patterns of \gls{tmh}s and their along the secretory pathway appears to be the variation in membrane potentials~\cite{Qin2011, Worley1994, Schapiro2000}.
 
 Several sequence features can be assigned to anchor \gls{tmh}s: Charged-residue flank biases, leucine intra-helix asymmetry, and the “aromatic belt”.
 
