reworked tables and figures sections to avoid overfull box errors. Not very succesful...

--- a/thesis.tex
+++ b/thesis.tex
@@ -16,8 +16,12 @@
 
 \usepackage{graphicx} %use [!ht] (which means ignore sensible protocols and place here) not [h] (which means place here-ish) for figures otherwise they end up at the end of the chapter.
 \usepackage{amsmath}
+
 \usepackage{csquotes}
 \usepackage{longtable}
+\usepackage[font=footnotesize,labelfont=bf,justification=justified,format=plain,up,textfont=up]{caption} %\usepackage{tabularx}
+\usepackage{ctable}
+\usepackage{multirow}
 \usepackage{enumerate}% http://ctan.org/pkg/enumerate
 \usepackage[acronym]{glossaries} %Whilst it's tempting, I've found tinkering with glossary structure and style is a nightmare.
 \usepackage{ragged2e} % allows handling long code lines and words over multiple lines.
