fixed table overflow.

--- a/thesis.tex
+++ b/thesis.tex
@@ -22,12 +22,9 @@
 \usepackage[font=footnotesize,labelfont=bf,justification=justified,format=plain,up,textfont=up]{caption} %\usepackage{tabularx}
 \usepackage{ctable}
 \usepackage{multirow}
-\usepackage{enumerate}% http://ctan.org/pkg/enumerate
-\usepackage[acronym]{glossaries} %Whilst it's tempting, I've found tinkering with glossary structure and style is a nightmare.
+\usepackage{enumerate}
+\usepackage[acronym]{glossaries}
 \usepackage{ragged2e} % allows handling long code lines and words over multiple lines.
-
-
-
 
 \addbibresource{references.bib} % This is the file containing all your bibtex references. All reference managers can export to this format.
 \graphicspath{{images/}} %Store all your figures here
@@ -79,8 +76,6 @@ Non\---polar helices figure prominently in structural biology, from the first pr
 By leveraging large datasets of trans-membrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
 In this thesis, I make the argument that there are different classifications of trans-membrane \(\alpha\) helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
-
-
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
